--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .DS_Store
+legacyPresets
+Exception referenced in liveTrack.png
 
 # Dataset folder
 data/*
@@ -6,6 +8,9 @@ data/*
 
 # TFRecord files
 *.record
+
+# TensorFlowApi
+tools/tensorflowapi/*
 
 # YOLOv5
 training/yolov5/*
@@ -18,6 +23,14 @@ training/yolov5/*
 *.avi
 *.txt
 *.yaml
+SessionConfigurations/*.json
+!SessionConfigurations/StandardAnalysis.json
+!SessionConfigurations/GrayLinearAnalytics.json
+!SessionConfigurations/GrayNonLinearAnalytics.json
+!SessionConfigurations/he.json
+!SessionConfigurations/Masking.json
+!SessionConfigurations/NoAlterations.json
+!SessionConfigurations/*Blueprint.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -190,3 +203,12 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+/training/tensorflowapi
+/training/pre-trained-models
+/tools/deep_sort
+/tools/deep_sort
+AnnotationsConverter.py
+liveTrackTest.py
+liveTrackTest.py
+/TensorFlowAnnotations
+/tools/deep_sort
